--- a/public/stylesheets/menu.css
+++ b/public/stylesheets/menu.css
@@ -40,7 +40,7 @@ File: Menu
   letter-spacing: .05em;
   margin-top: 0px;
   float: left;
-  padding: 0px 10px;
+  padding: 0px;
 }
 #topnav .topbar-main .logo h1 {
   margin: 0px auto;
