--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -130,7 +130,7 @@
                                 </ul>
                             </li>
                             <li class="has-submenu">
-                                <a href="/my/test"><i class="md md-invert-colors-on"></i>대리찾기</a>
+                                <a href="/test"><i class="md md-invert-colors-on"></i>대리찾기</a>
                             </li>
                             
                             <li class="has-submenu">
