--- a/views/index.ejs
+++ b/views/index.ejs
@@ -366,22 +366,11 @@
                     <div class="col-lg-4">
                         <div class="card-box widget-user">
                             <div>
-                                <img src="/images/gom.jpg" class="img-responsive img-circle" alt="user">
+                                <img src="/images/ddacjy.jpg" class="img-responsive img-circle" alt="user">
                                 <div class="wid-u-info">
                                     <h4 class="m-t-0 m-b-5">정예지</h4></h4>
                                     <p class="text-muted m-b-5 font-13">yesBear@gmail.com</p>
                                     <small class="text-warning"><b>CEO</b></small>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="card-box widget-user">
-                            <div>
-                                <img src="/images/gojack.jpg" class="img-responsive img-circle" alt="user">
-                                <div class="wid-u-info">
-                                    <h4 class="m-t-0 m-b-5">윤원진</h4></h4>
-                                    <p class="text-muted m-b-5 font-13">chairman@gmail.com</p>
-                                    <small class="text-warning"><b>Investor</b></small>
                                 </div>
                             </div>
                         </div>
@@ -399,7 +388,7 @@
 
                         <div class="card-box widget-user">
                             <div>
-                                <img src="/images/meggy.jpg" class="img-responsive img-circle" alt="user">
+                                <img src="/images/gom.jpg" class="img-responsive img-circle" alt="user">
                                 <div class="wid-u-info">
                                     <h4 class="m-t-0 m-b-5">박소윤</h4>
                                     <p class="text-muted m-b-5 font-13">psy@gmail.com</p>
@@ -415,11 +404,32 @@
                                 <div class="wid-u-info">
                                     <h4 class="m-t-0 m-b-5">김동은</h4>
                                     <p class="text-muted m-b-5 font-13">mimi@gmail.com</p>
-                                    <small class="text-pink"><b>Designer</b></small>
+                                    <small class="text-warning"><b>Designer</b></small>
                                 </div>
                             </div>
                         </div>
 
+                        <div class="card-box widget-user">
+                            <div>
+                                <img src="/images/gojack.jpg" class="img-responsive img-circle" alt="user">
+                                <div class="wid-u-info">
+                                    <h4 class="m-t-0 m-b-5">윤원진</h4></h4>
+                                    <p class="text-muted m-b-5 font-13">chairman@gmail.com</p>
+                                    <small class="text-success"><b>Investor</b></small>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="card-box widget-user">
+                            <div>
+                                <img src="/images/panda.jpg" class="img-responsive img-circle" alt="user">
+                                <div class="wid-u-info">
+                                    <h4 class="m-t-0 m-b-5">이탐</h4></h4>
+                                    <p class="text-muted m-b-5 font-13">goodman@gmail.com</p>
+                                    <small class="text-success"><b>Helper</b></small>
+                                </div>
+                            </div>
+                        </div>
                     </div>
 
                 </div>
