--- a/views/login.ejs
+++ b/views/login.ejs
@@ -44,7 +44,7 @@
         <div class="col-xs-12">
         
             <div class="text-center">
-                <a href="/" class="logo logo-lg"><img src="/images/data-logo.png"></a>
+                <a href="/" class="logo logo-lg"><img src="/images/data-logo.png" width="85%" height="85%" align="center"></a>
             </div>
         </div>
 
@@ -97,7 +97,7 @@
                     </div>
 
                     <div class="col-sm-5 text-right">
-                        <a href="/login/new" class="text-muted" style="color: MintCream">Create an account</a>
+                        <a href="/login/new" class="text-muted" style="color: MintCream"; font-size=10px>Create an account</a>
                     </div>
                 </div>
             </form>
