--- a/views/login_new.ejs
+++ b/views/login_new.ejs
@@ -26,27 +26,27 @@
 
         <div class="wrapper-page">
         
-            <div class="col-xs-12">
+            <!--<div class="col-xs-12">-->
         
-                <div class="text-center">
-                    <a href="/" class="logo logo-lg"><img src="/images/data-logo.png"></a>
-                </div>
-            </div>
+            <!--    <div class="text-center">-->
+            <!--        <a href="/" class="logo logo-lg"><img src="/images/data-logo.png"></a>-->
+            <!--    </div>-->
+            <!--</div>-->
             
              <div class="col-lg-12">
                         <form class="form-horizontal m-t-20" id="user" action="/login/new" method="post">
-                            <div id="progressbarwizard" class="pull-in">
+                            <div id="progressbarwizard" class="pull-in" >
                                 <ul style="visibility:hidden">
                                     <li><a href="#account-2" data-toggle="tab">Account</a></li>
                                     <li><a href="#profile-tab-2" data-toggle="tab">Profile</a></li>
                                     <li><a href="#finish-2" data-toggle="tab">Finish</a></li>
                                 </ul>
 
-                                <div class="tab-content bx-s-0 m-b-0">
+                                <div class="tab-content bx-s-0 m-b-0" style="background-color:#6a76fc; background-color:rgba(255,255,255,0.3);padding:40px; border-radius: 5px;"  >
                                     
                                     
-                                    <div class="text-center">
-                                        <a href="/" class="logo logo-lg"><img src="/images/data-logo.png"></a>
+                                    <div class="text-center" style="margin-bottom:40px;margin-right:5px">
+                                        <a href="/" class="logo logo-lg"><img src="/images/data-logo.png" width="70%"></a>
                                     </div>
                                     
                                     
@@ -54,7 +54,7 @@
                                         <div class="bar progress-bar progress-bar-primary"></div>
                                     </div>
 
-                                    <div class="tab-pane p-t-10 fade" id="account-2">
+                                    <div class="tab-pane p-t-10 fade" id="account-2" >
                                         <div class="row">
                                             <div class="form-group">
                                                 <div class="col-xs-12">
@@ -93,30 +93,83 @@
                                     </div>
                                     <div class="tab-pane p-t-10 fade" id="profile-tab-2">
                                         <div class="row">
-                                            <div class="form-group clearfix">
-                                                <label class="col-lg-2 control-label" for="name1"> First name *</label>
-                                                <div class="col-lg-10">
-                                                    <input id="name1" name="name" type="text" class="required form-control">
-                                                </div>
+                                            <div class="col-xs-12">
+                                                
+                                                    <p><b>전공 또는 관심분야</b></p>
+                                                    <div class="checkbox form-group">
+                                                        <input id="checkbox0" type="checkbox" checked>
+                                                        <label for="checkbox0">
+                                                            <b>없음</b>
+                                                        </label>
+                                                    </div>
+                                                    <div class="checkbox checkbox-primary form-group">
+                                                        <input id="checkbox2" type="checkbox">
+                                                        <label for="checkbox2">
+                                                            <b>생명/의학/약학</b>
+                                                        </label>
+                                                    </div>
+                                                    <div class="checkbox checkbox-success form-group">
+                                                        <input id="checkbox3" type="checkbox">
+                                                        <label for="checkbox3">
+                                                            금융/경제
+                                                        </label>
+                                                    </div>
+                                                    <div class="checkbox checkbox-info form-group">
+                                                        <input id="checkbox4" type="checkbox">
+                                                        <label for="checkbox4">
+                                                            IT/공학
+                                                        </label>
+                                                    </div>
+                                                    <div class="checkbox checkbox-warning form-group">
+                                                        <input id="checkbox5" type="checkbox">
+                                                        <label for="checkbox5">
+                                                            사회/교육/심리
+                                                        </label>
+                                                    </div>
+                                                    <div class="checkbox checkbox-danger form-group">
+                                                        <input id="checkbox6" type="checkbox">
+                                                        <label for="checkbox6">
+                                                            언어
+                                                        </label>
+                                                    </div>
+                                                </b>    
                                             </div>
-                                            <div class="form-group clearfix">
-                                                <label class="col-lg-2 control-label " for="surname1"> Last name *</label>
-                                                <div class="col-lg-10">
-                                                    <input id="surname1" name="surname" type="text" class="required form-control">
 
+                                        </div>
+
+                                    </div>
+                                    <div class="tab-pane p-t-10 fade" id="finish-2">
+                                        <div class="row">
+                                            <div class="col-xs-12">
+                                                <p>사용가능한 언어 선택</p>
+                                                <div class="checkbox form-group">
+                                                    <input id="checkbox0" type="checkbox" checked>
+                                                    <label for="checkbox0">
+                                                        없음
+                                                    </label>
                                                 </div>
-                                            </div>
-
-                                            <div class="form-group clearfix">
-                                                <label class="col-lg-2 control-label " for="email1">Email *</label>
-                                                <div class="col-lg-10">
-                                                    <input id="email1" name="email" type="text" class="required email form-control">
+                                                <div class="checkbox checkbox-primary form-group">
+                                                    <input id="checkbox2" type="checkbox">
+                                                    <label for="checkbox2">
+                                                        Excel
+                                                    </label>
+                                                </div>
+                                                <div class="checkbox checkbox-success form-group">
+                                                    <input id="checkbox3" type="checkbox">
+                                                    <label for="checkbox3">
+                                                        Python
+                                                    </label>
+                                                </div>
+                                                <div class="checkbox checkbox-info form-group">
+                                                    <input id="checkbox4" type="checkbox">
+                                                    <label for="checkbox4">
+                                                        R/SAS
+                                                    </label>
                                                 </div>
                                             </div>
 
                                         </div>
-                                    </div>
-                                    <div class="tab-pane p-t-10 fade" id="finish-2">
+                                        <br>
                                         <div class="row">
                                             <div class="form-group clearfix">
                                                 <div class="col-lg-12">
@@ -145,7 +198,11 @@
                         <!--</div>-->
                     </div>
                     
-                
+            
+            <p>&nbsp</p>
+            <p>&nbsp</p>
+            <p>&nbsp</p>
+            <p>&nbsp</p>
             <form class="form-horizontal m-t-20" id="user" action="/login/new" method="post">
                 <div class="form-group">
                     <div class="col-xs-12">
