--- a/views/my_show.ejs
+++ b/views/my_show.ejs
@@ -36,7 +36,7 @@
                                     <p class="text-muted"><%=data.userinfo.uid%></p>
                                 </div>
 
-                                <button type="button" class="btn btn-success btn-sm w-sm waves-effect m-t-10 waves-light">프로필 변경</button>
+                                <input type="file" class="btn btn-success btn-sm w-sm waves-effect m-t-10 waves-light">프로필 변경</button>
                                 <button type="button" class="btn btn-danger btn-sm w-sm waves-effect m-t-10 waves-light">포인트 충전</button>
 
 
